# aws-lambda-powerlib-os

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yaml  conftest.py  pyproject.toml
.github/workflows/: check_code_quality.yml
aws_lambda_powerlib/events/: __init__.py  api_gateway.py  event.py  event_bridge.py  sqs.py
aws_lambda_powerlib/services/: __init__.py
aws_lambda_powerlib/services/common/: responser.py
aws_lambda_powerlib/services/s3/: base.py  paginator.py  presigner.py
tests/: TestTasks.yaml
tests/events/: test_event.py  test_sqs.py
